fix description text alignment

--- a/src/components/section/section.module.scss
+++ b/src/components/section/section.module.scss
@@ -10,6 +10,7 @@
 
   p {
     font-size: var(--font-md);
+    align-self: flex-start;
   }
 
   a {
