--- a/src/layouts/infoLayout/infoLayout.module.scss
+++ b/src/layouts/infoLayout/infoLayout.module.scss
@@ -1,7 +1,7 @@
 .infoLayout {
   // title spacing
   & > :first-child {
-    margin-left: var(--space-xs);
+    margin-left: var(--space-md);
     margin-bottom: var(--space-xl);
   }
 }
